[package]
name = "aoc_202x"
version = "0.1.0"
edition = "2024"
authors = ["beeb <hi@beeb.li>"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_sign_loss = "allow"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
itertools = "0.14"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
winnow = "0.7"
