[package]
name = "aoc_202x"
version = "0.1.0"
edition = "2024"
authors = ["beeb <hi@beeb.li>"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
good_lp = { version = "1.14.2", default-features = false, features = [
    "microlp",
] }
itertools = "0.14"
num = "0.4.3"
petgraph = "0.8.3"
ureq = "3.1.4"
winnow = "0.7"
